first html edit

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -11,7 +11,17 @@
 </head>
 <body>
     <!-- Create a header element  -->
+    <header>
+        <h1>Mai Hlee (Miley) Vang</h1>
+        <image src=""></image>
+        <li>Fur Mama to an Akita and Husky</li>
+        <li>Human Mama to an 1 year old and 4 month</li>
+        <li>Love to travel for food</li>
+    </header>
 
+    <footer>
+        <p> "Failure is Not The Oppisite of Success. It is Part of The Sucess." - Unknown</p>
+    </footer>
     <!-- Inside the header, add an <h1> element containing your name -->
 
     <!-- Include an image -->
