--- a/assignment/index.html
+++ b/assignment/index.html
@@ -9,13 +9,18 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
+
+
 <body>
     <!-- Create a header element  -->
+
+    <img src="https://w0.peakpx.com/wallpaper/543/150/HD-wallpaper-earth-sunrise-ocean-nature-horizon-poppy-red-flower-coastline.jpg"/>
+
     <header>
         <h1>Mai Hlee (Miley) Vang</h1>
-        <image src=""></image>
-        <li>Fur Mama to an Akita and Husky</li>
-        <li>Human Mama to an 1 year old and 4 month</li>
+      
+        <li>Fur Mama to 4 year old Akita and 2 year old Husky</li>
+        <li>Human Mama to 1 year old and 4 month </li>
         <li>Love to travel for food</li>
     </header>
 
@@ -31,5 +36,6 @@
     <!-- Create a footer element -->
 
     <!-- Inside your footer, put a <p> element with your favorite quote -->
+
 </body>
 </html>
