edit to CSS, JS, Terminal

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -8,24 +8,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <!--source in javascript--> <script src="helloWorld.js"></script> 
 </head>
 
 
 <body>
     <!-- Create a header element  -->
 
-    <img src="https://w0.peakpx.com/wallpaper/543/150/HD-wallpaper-earth-sunrise-ocean-nature-horizon-poppy-red-flower-coastline.jpg"/>
 
     <header>
+    <div class="header">  
         <h1>Mai Hlee (Miley) Vang</h1>
-      
-        <li>Fur Mama to 4 year old Akita and 2 year old Husky</li>
-        <li>Human Mama to 1 year old and 4 month </li>
-        <li>Love to travel for food</li>
+    </div>
     </header>
 
+    <img src="https://w0.peakpx.com/wallpaper/543/150/HD-wallpaper-earth-sunrise-ocean-nature-horizon-poppy-red-flower-coastline.jpg"/>
+
+    <ul>
+        <li>Fur Mama to 4 year old Akita and 2 year old Husky</li>
+        <li>Human Mama to 1 year old and 4 month</li> 
+        <li>Love to travel for food</li> 
+    </ul>
+
     <footer>
+    <div class="footer">  
         <p> "Failure is Not The Oppisite of Success. It is Part of The Sucess." - Unknown</p>
+    </div>
     </footer>
     <!-- Inside the header, add an <h1> element containing your name -->
 
