--- a/assignment/index.html
+++ b/assignment/index.html
@@ -13,27 +13,24 @@
 
 
 <body>
-    <!-- Create a header element  -->
+    <div class="wrapper1">
+        <header>
+            <h1>Mai Hlee (Miley) Vang</h1>
+    </div> 
 
-
-    <header>
-    <div class="header">  
-        <h1>Mai Hlee (Miley) Vang</h1>
-    </div>
     </header>
+        <img src="https://w0.peakpx.com/wallpaper/543/150/HD-wallpaper-earth-sunrise-ocean-nature-horizon-poppy-red-flower-coastline.jpg"/>
 
-    <img src="https://w0.peakpx.com/wallpaper/543/150/HD-wallpaper-earth-sunrise-ocean-nature-horizon-poppy-red-flower-coastline.jpg"/>
+        <ul>
+            <li>Fur Mama to 4 year old Akita and 2 year old Husky</li>
+            <li>Human Mama to 1 year old and 4 month</li> 
+            <li>Love to travel for food</li> 
+        </ul>
 
-    <ul>
-        <li>Fur Mama to 4 year old Akita and 2 year old Husky</li>
-        <li>Human Mama to 1 year old and 4 month</li> 
-        <li>Love to travel for food</li> 
-    </ul>
-
-    <footer>
-    <div class="footer">  
-        <p> "Failure is Not The Oppisite of Success. It is Part of The Sucess." - Unknown</p>
-    </div>
+    <footer> 
+        <div class="wrapper2">
+            <p> "Failure is Not The Oppisite of Success. It is Part of The Sucess." - Unknown</p>
+        </div>    
     </footer>
     <!-- Inside the header, add an <h1> element containing your name -->
 
